test/classes/errors/nilability-init-var/init-var-nonnil-unmanaged-from-oknil-borrowed.good
init-var-nonnil-unmanaged-from-oknil-borrowed.chpl:9: error: cannot initialize variable 'lhs' of non-nilable type 'unmanaged MyClass' from a nilable 'borrowed MyClass?'
